fix(ui): Uneven vertical alignment in blog links.
- introduce a gap in auto-generated blog list elements.
- add styles for blog post link metadata title and date.
- vertically align text in center and keep the padding.

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -204,12 +204,25 @@ footer {
   &__link {
     color: var(--link-color);
     display: flex;
+    gap: 2em;
     justify-content: space-between;
     border-bottom: var(--line-hidden-color);
 
     &:hover {
       color: var(--link-hover-color);
       border-bottom: var(--line-hover-color);
+    }
+
+    &-title {
+      line-height: 1.2em;
+      display: inline-flex;
+      align-items: center;
+    }
+
+    &-date {
+      text-wrap: nowrap;
+      display: inline-flex;
+      align-items: center;
     }
   }
 
